--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+<head>
+    <meta charset=utf-8>
+    <meta name=viewport content="width=device-width,initial-scale=1">
     <title>pointguide</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+    <link href=./static/css/app.142fe30d10f3b29d1080c1cbc2deae0a.css rel=stylesheet>
+</head>
+<body>
+<div id=app></div>
+<script type=text/javascript src=./static/js/manifest.3ad1d5771e9b13dbdad2.js></script>
+<script type=text/javascript src=./static/js/vendor.582a5329450b45d7e70b.js></script>
+<script type=text/javascript src=./static/js/app.6b279eeb65ad59b373e5.js></script>
+</body>
 </html>
