--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <meta name=viewport content="width=device-width,initial-scale=1">
     <title>pointguide</title>
     <link href=./static/css/app.142fe30d10f3b29d1080c1cbc2deae0a.css rel=stylesheet>
+    <link href=./static/css/app.2c59ad3e976d5344ef73ff3c7fe08b88.css rel=stylesheet>
 </head>
 <body>
 <div id=app></div>
 <script type=text/javascript src=./static/js/manifest.3ad1d5771e9b13dbdad2.js></script>
 <script type=text/javascript src=./static/js/vendor.582a5329450b45d7e70b.js></script>
 <script type=text/javascript src=./static/js/app.6b279eeb65ad59b373e5.js></script>
+<script type=text/javascript src=./static/js/manifest.3ad1d5771e9b13dbdad2.js></script>
+<script type=text/javascript src=./static/js/vendor.582a5329450b45d7e70b.js></script>
+<script type=text/javascript src=./static/js/app.1deefd7dbf1837b20bdd.js></script>
 </body>
 </html>
